--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "pkg"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "echo \"Error: no test yet\"",
     "build": "pack build",
-    "releaseit": "release-it --no-npm.publish",
-    "release": "echo run npm publish . --tag latest --dry-run in pkg/ directory"
+    "release": "pack publish",
+    "version": "npm run build"
   },
   "keywords": [
     "accessibility",
@@ -45,7 +45,6 @@
     "@pika/pack": "^0.4.0",
     "@pika/plugin-build-web": "^0.5.1",
     "@pika/plugin-standard-pkg": "^0.5.1",
-    "@pika/types": "^0.5.1",
-    "release-it": "^12.3.4"
+    "@pika/types": "^0.5.1"
   }
 }
