--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
       ],
       [
         "@pika/plugin-build-web"
+      ],
+      [
+        "pika-plugin-unpkg-field"
       ]
     ]
   },
@@ -45,6 +48,7 @@
     "@pika/pack": "^0.4.0",
     "@pika/plugin-build-web": "^0.5.1",
     "@pika/plugin-standard-pkg": "^0.5.1",
-    "@pika/types": "^0.5.1"
+    "@pika/types": "^0.5.1",
+    "pika-plugin-unpkg-field": "^1.1.0"
   }
 }
